--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -22,8 +22,8 @@ jobs:
 
     - name: Build (with ${{matrix.compiler}}, for ${{matrix.os}})
       shell: bash
-      run: make CC=C:\msys64\mingw64\bin\clang64.exe D:/a/CombineRoms/CombineRoms/combine_roms.c -o  D:/a/CombineRoms/CombineRoms/dist/compile_roms.c
-
+      run: make CC=/c/msys64/mingw64/bin/clang64.exe D:/a/CombineRoms/CombineRoms/combine_roms.c -o D:/a/CombineRoms/CombineRoms/combine_roms.exe
+      
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
       with:
