--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,15 +15,9 @@ jobs:
     - name: Mkdir dist
       run: mkdir dist
 
-    - name: Add clang path to $PATH env
-      shell: bash
-      if: runner.os == 'Windows'
-      run: echo "PATH=$PATH:C:\msys64\mingw64\bin" >> $GITHUB_ENV
+    - name: Build (with Clang)
+      run: C:\msys64\mingw64\bin\clang.exe D:/a/CombineRoms/CombineRoms/combine_roms.c -o D:/a/CombineRoms/CombineRoms/combine_roms.exe
 
-    - name: Build (with ${{matrix.compiler}}, for ${{matrix.os}})
-      shell: bash
-      run: make CC=/c/msys64/mingw64/bin/clang64.exe /d/a/CombineRoms/CombineRoms/combine_roms.c -o D:/a/CombineRoms/CombineRoms/combine_roms.exe
-      
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
       with:
