--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -6,11 +6,17 @@ on:
 
 jobs:
   build:
-
     runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Install MSYS2 and Clang
+      run: |
+        choco install msys2 -y
+        refreshenv
+        C:\msys64\usr\bin\bash.exe -c "pacman -Syu --noconfirm"
+        C:\msys64\usr\bin\bash.exe -c "pacman -S --noconfirm mingw-w64-x86_64-clang"
 
     - name: Mkdir dist
       run: mkdir dist
