--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,19 +10,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Install MSYS2 and Clang
-      run: |
-        choco install msys2 -y
-        refreshenv
-        C:\msys64\usr\bin\bash.exe -c "pacman -Syu --noconfirm"
-        C:\msys64\usr\bin\bash.exe -c "pacman -S --noconfirm mingw-w64-x86_64-clang"
-
+    
     - name: Mkdir dist
       run: mkdir dist
 
     - name: Build (with Clang)
-      run: C:\msys64\mingw64\bin\clang.exe D:/a/CombineRoms/CombineRoms/combine_roms.c -o D:/a/CombineRoms/CombineRoms/combine_roms.exe
+      run: cl /O2 D:/a/CombineRoms/CombineRoms/combine_roms.c -o D:/a/CombineRoms/CombineRoms/combine_roms.exe
 
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
