--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,6 +10,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.0.2
     
     - name: Mkdir dist
       run: mkdir dist
